Fixed double scrollbar on event page

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     font-weight: normal;
     color: hsl(0, 0%, 90%);
     max-width: 100vw;
+    overflow: auto;
 }
 
 @font-face {
